test/visibility/import/rename/same_name_conflict.good
same_name_conflict.chpl:1: error: symbol F is multiply defined
note: 'Foo' was renamed to 'F' at same_name_conflict.chpl:8
same_name_conflict.chpl:4: note: also defined here
